View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0021690 | Open CASCADE | OCCT:DRAW | public | 2010-04-20 13:16 | 2012-03-29 17:26 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | Windows NT | ||||
Product Version | 6.4.0 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0021690: "cpulimit" commad does not implemented on Win32 platform | ||||
Description | At the moment, "cpulimit" DRAW command has only unix part of implementation. See the package "Draw", file Draw_BasicCommands.cxx, lines 208-244 By the way, SWDRAW package has needed implementation for WNT platform. see the file cpulimit.pc To resolve this issue I propose move implementation from SWDRAW package to Draw. | ||||
Tags | No tags attached. | ||||
Test case number | Test case is not required | ||||
|
SVN branch http://svn/svn/occt/branches/OCC21690 (revision 9663) is ready to be reviewed (implementation "cpulimit" DRAW command for WNT platform). |
|
Code review remarks: (a) it is bad practice to commit in one set changes made for the fix and update from trunk, please avoid this in the future (b) as soon as implementation in SWDRAW/cpulimit.pc becomes unuseful, could you please remove it? |
|
SVN branch http://svn/svn/occt/branches/OCC21690 is ready. In package SWDRAW command "limitelapsed" for Win32 platform and file "cpulimit.pc" with its implementation has been removed. This is done because the functionality of command "limitelapsed" transferred to the command "cpulimit" in package DRAW. |
|
Reviewed with no remarks; please test and use in testing on WNT |
|
Dear BugMaster, Workbench KAS:dev:mkv-21690-occt was updated from SVN branch http://svn/svn/occt/branches/OCC21690 (and mkv-21690-products from trunk) and compiled on Linux platform. There are compilation errors in mkv-21690-occt: Info : -------> Draw_BasicCommands.cxx Error : Errors occured in Shell /dn47/KAS/dev/mkv-21690-occt/src/Draw/Draw_BasicCommands.cxx:217: error: expected initializer before в__CpuFuncв_T Error : Failed : Draw_BasicCommands.cxx Info : ----------------------- Compilation Report ----------------------- Info : Failed : :KAS:dev:mkv-21690-occt:Draw:source:Draw_BasicCommands.cxx Info : ----------------------------------------------------------------- |
|
SVN branch http://svn/svn/occt/branches/OCC21690 (revision 9699): correction for compilation on Linux platform. |
|
*RESTORED* (0018818) abv (administrator) - 2011-12-09 20:19 http://tracker.dev.opencascade.org/view.php?id=21690#c18818 ---------------------------------------------------------------------- No remarks on code; please do not forget to switch bugs to resolved state when you provide the fix |
|
Dear BugMaster, Workbench KAS:dev:mkv-21690-occt was updated from SVN branch http://svn/svn/occt/branches/OCC21690 (and mkv-21690-products from trunk) and compiled on Linux platform. There are not regressions in mkv-21690-products regarding to KAS:dev:products-652-opt. See results in /QADisk/occttests/results/KAS/dev/mkv-21690-products_09122011/lin See reference results in /QADisk/occttests/results/KAS/dev/products-652-opt_23092011/lin See test cases in /QADisk/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Integrated into trunk of occt repository Date: 2011-12-16 16:10:37 +0400 (Fri, 16 Dec 2011) New Revision: 9768 Removed: trunk/src/SWDRAW/FILES trunk/src/SWDRAW/cpulimit.pc Modified: trunk/src/Draw/Draw_BasicCommands.cxx trunk/src/SWDRAW/SWDRAW.cxx |
occt: master 47cbc555 2011-12-16 12:10:37
Committer: bugmaster Details Diff |
0021690: "cpulimit" command does not implemented on Win32 platform |
Affected Issues 0021690 |
|
mod - src/Draw/Draw_BasicCommands.cxx | Diff File | ||
rm - src/SWDRAW/cpulimit.pc | Diff File | ||
rm - src/SWDRAW/FILES | Diff File | ||
mod - src/SWDRAW/SWDRAW.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2010-05-13 16:20 | bugmaster | Assigned To | bugmaster => abv |
2010-05-13 16:20 | bugmaster | Status | new => assigned |
2011-12-01 13:52 |
|
Assigned To | abv => ama |
2011-12-06 15:07 |
|
Note Added: 0018752 | |
2011-12-06 15:08 |
|
Assigned To | ama => abv |
2011-12-06 16:19 |
|
Status | assigned => resolved |
2011-12-06 19:33 |
|
Note Added: 0018766 | |
2011-12-06 19:33 |
|
Assigned To | abv => ama |
2011-12-06 19:33 |
|
Status | resolved => assigned |
2011-12-07 17:49 |
|
Note Added: 0018772 | |
2011-12-07 17:51 |
|
Assigned To | ama => abv |
2011-12-08 09:32 |
|
Status | assigned => resolved |
2011-12-08 09:33 |
|
Note Added: 0018776 | |
2011-12-08 09:33 |
|
Assigned To | abv => ama |
2011-12-08 09:33 |
|
Status | resolved => reviewed |
2011-12-08 10:04 |
|
Product Version | => 6.4.0 |
2011-12-08 10:04 |
|
Fixed in Version | EMPTY => |
2011-12-08 10:04 |
|
Target Version | => 6.5.3 |
2011-12-08 10:04 |
|
Description Updated | |
2011-12-09 11:19 |
|
Note Added: 0018806 | |
2011-12-09 11:19 |
|
Note Edited: 0018806 | |
2011-12-09 11:20 |
|
Status | reviewed => assigned |
2011-12-09 15:34 |
|
Note Added: 0018811 | |
2011-12-09 15:35 |
|
Assigned To | ama => abv |
2011-12-12 16:26 |
|
Note Added: 0018819 | |
2011-12-12 16:26 |
|
Assigned To | abv => ama |
2011-12-12 16:26 |
|
Status | assigned => resolved |
2011-12-12 16:27 |
|
Status | resolved => reviewed |
2011-12-12 19:16 |
|
Note Added: 0018826 | |
2011-12-12 19:16 |
|
Test case number | => Test case is not required |
2011-12-12 19:16 |
|
Status | reviewed => tested |
2011-12-16 16:12 | bugmaster | Note Added: 0018888 | |
2011-12-16 16:12 | bugmaster | Status | tested => verified |
2011-12-16 16:12 | bugmaster | Resolution | open => fixed |
2012-01-10 17:22 | bugmaster | Note Edited: 0018888 | |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 47cbc555 |