0021690: "cpulimit" command does not implemented on Win32 platform